# rustfetch

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: arch_logo.txt  main.rs
